# FaceDetector

./: .gitignore  database.db  main.py  pyproject.toml
backend/: 1.py  DBFace.py  common.py  database.py  detector.py  main.py  models.py  processing.py  requirements.txt
backend/detecting/: main.py
backend/ml_utils/: age_gender.py  face_detection.py  face_recognition.py
backend/model/: DBFace.py
backend/routing/: main.py
frontend/: package-lock.json
frontend/facedetector/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/facedetector/src/: App.vue  main.js
frontend/facedetector/src/components/: FaceCard.vue  FaceDetails.vue  FileDropzone.vue  UploadProgress.vue  VideoPlayer.vue
frontend/facedetector/src/router/: index.js
frontend/facedetector/src/views/: ErrorPage.vue  FaceDetailsPage.vue  ProcessingPage.vue  ResultsPage.vue  UploadPage.vue
