[tool.poetry]
package-mode = false
name = "facedetector"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
mtcnn = "^1.0.0"
opencv-python = "^4.11.0.86"
pillow = ">=10.2.0,<10.3.0"
pandas = "^2.3.0"
scikit-learn = "^1.7.0"
torch = ">=2.2.0,<2.3.0"
facenet-pytorch = "^2.6.0"
pyqt5-qt5 = "5.15.2"
pyqt5-tools = "5.15.9.3.3"
fastapi = "^0.115.14"
